particle js not showing on all screen bug

--- a/Css/Style.css
+++ b/Css/Style.css
@@ -6,7 +6,13 @@
 }
 
 html {
+  font-family: 'Roboto', sans-serif;
   font-size: 62.5%;
+}
+
+.particles-js-canvas-el {
+  position: relative;
+  top: 0;
 }
 
 body {
@@ -41,6 +47,58 @@ iframe {
   border-radius: .6rem;
   box-shadow: 0px 8px 12px rgba(0,0,0,.8);
 }
+.heading {
+  display: inline-block;
+  font-size: 5rem;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 600;
+  color: #fff;
+  border-bottom: 3px solid greenyellow;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  letter-spacing: 1rem;
+}
+.form {
+  position: relative;
+  top: 200vh;
+}
+
+.aboutus {
+  position: relative;
+  top: 100vh;
+}
+
+.form__fields {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.form__fields > * {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.input:first-child {
+  margin-top: 1.6rem;
+}
+.input {
+  font-size: 2.5rem;
+  padding: 1rem 1.5rem;
+  margin: .8rem 0;
+  border-radius: .6rem;
+  outline: none;
+}
+.form__submit {
+  font-size: 2.5rem;
+  padding: 1rem 1.5rem;
+  margin: .8rem 0;
+  border-radius: .6rem; 
+  outline: none;
+}
+
 
 @media only screen and (max-width: 620px) {
   iframe {
@@ -52,4 +110,9 @@ iframe {
   html {
     font-size: 50%;
   }
+}
+p{
+  font-size: 1.8rem;
+  color: #fff;
+  margin: 5rem 7.2rem;
 }
